compute nodes only need openvswitch
cisco_ucsm and cisco_nexus should only be enabled on the controller
nodes. This commit ensure the we keep these drivers out of the the compute
neutron::plugins::ml2::mechanism_drivers.

See: https://github.com/openstack/puppet-tripleo/blob/a3d8844acac305a0f128bc55ba586faa7b80f8b1/manifests/profile/base/neutron/plugins/ml2.pp#L54

--- a/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
@@ -44,12 +44,16 @@ parameter_defaults:
   NetworkNexusHostKeyChecks: '{{ network_nexus_host_key_checks|to_json }}'
   NeutronNetworkVLANRanges: '{{ network_nexus_vlan_range }}'
 
-  NeutronMechanismDrivers: '{{ neutron_mechanism_drivers }}'
-
   NeutronTypeDrivers: '{{ type_driver }}'
   NeutronNetworkType: '{{ network_type }}'
   NetworkNexusVxlanVniRanges: '{{ vni_ranges }}'
   NetworkNexusVxlanMcastRanges: '{{ mcast_ranges }}'
+
+  ControllerExtraConfig:
+    neutron::plugins::ml2::mechanism_drivers: ['openvswitch', 'cisco_ucsm', 'cisco_nexus']
+
+  NovaComputeExtraConfig:
+    neutron::plugins::ml2::mechanism_drivers: ['openvswitch']
 
 #parameters:
 #  Debug: "{{ overcloud_debug }}"
